--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ resume: true
 resume-external: true
 resume-url: //github.com/skhaz/resume
 
-url: /
+url: https://skhaz.io
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
