--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Rodrigo Delduca
-bio: programer and game developer
+bio: programmer and game developer
 
 # if it's an external image, update below for true
 # better with square images
