--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ post-advance-links: []
 show-author: true
 
 # do you want some animations?
-animation: true
+animation: false
 
 gems:
   - jekyll-seo-tag
