--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ twitter: skhaz
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: skhaz
 # youtube: myyoutube
 # spotify: myspotify
 github: skhaz
