--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ picture: data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/2wCEAAgGBgcGBQgHBwcJ
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
+resume: false 
 resume-external: true
 resume-url: //github.com/skhaz/resume
 
@@ -58,11 +58,11 @@ width: large
 # paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+projects: false 
 
 # if you don't need "about" or "blog", comment them out below
-about: true
-blog: true
+about: false
+blog: false
 
 # do you want to show the "read time" of the posts?
 read-time: false
